<resources>
    <string name="app_name">The Scout</string>
    <string name="the_scout">The Scout</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="don_t_have_ann_account_sign_up">Don\'t have ann account? Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_login">Login</string>
    <string name="login_tittle">Login</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="the_next_big_name_is_a_click_away">The Next Big Name Is A Click Away</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="drawer_email_com">drawer@email.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_fragment">Settings_fragment</string>
    <string name="home">Home</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="view_players">View Players</string>
    <string name="available_players">Available Players</string>
    <string name="teams">Teams</string>
    <string name="team_name">Team Name</string>
    <string name="view_teams">View Teams</string>
    <string name="team_logo">Team Logo</string>
    <string name="info_icon">info icon</string>
    <string name="title_activity_epl_stats">EplStatsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="standings">Standings</string>
    <string name="top_scorers">Top Scorers</string>
    <string name="standings_fragment">Standings Fragment</string>
    <string name="scorers_fragment">Scorers Fragment</string>
    <string name="teams_fragment">Teams Fragment</string>
    <string name="scorer_name">Scorer Name</string>
    <string name="goals_scored">Goals Scored</string>
    <string name="sample_gmail_com">sample@gmail.com</string>
    <string name="_123_sw_best_ever_ave_portland_oregon_97222">123 SW Best Ever Ave. Portland, Oregon, 97222</string>
    <string name="_503_223_1282">(503) 223-1282</string>
    <string name="visit_website">Visit Website</string>
    <string name="save_restaurant">Save Restaurant</string>
    <string name="team_crest">team crest</string>
    <string name="restaurant_name">Restaurant Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="premier_league_logo">Premier League Logo</string>
    <string name="serie_a_logo">serie a logo</string>
    <string name="save_team">Save Team</string>
    <string name="saved_teams">Saved Teams</string>
    <string name="drag_icon">Drag Icon</string>
    `

</resources>
