<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/scout"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/catch_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_next_big_name_is_a_click_away"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/myBrown"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_scout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/myBrown"/>

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:height="50dp"
        android:width="270dp"
        android:padding="5dp"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorTextIcons"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/account_question_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="16sp" />

</RelativeLayout>