<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/prem1"
        android:id="@+id/playersBtn"
        android:onClick="buttonClick"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_list"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:contentDescription="@string/premier_league_logo"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/seriea"
        android:id="@+id/seriaBtn"
        android:onClick="buttonClick"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/round_list"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:contentDescription="@string/serie_a_logo"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="buttonClick"
        android:id="@+id/savedTeams"
        android:text="@string/saved_teams"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorTextIcons"
        android:textSize="18sp"
        android:layout_below="@id/seriaBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>


</RelativeLayout>